--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ NODE_ENV="production"
 
 # CORS Configuration
 # Multiple URLs can be separated by commas
-FRONTEND_URL="http://localhost:5173,http://localhost:8080,https://yourdomain.com"
+FRONTEND_URL="*"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
