--- a/backend/.env
+++ b/backend/.env
@@ -12,7 +12,7 @@ PORT=3001
 NODE_ENV="development"
 
 # CORS
-FRONTEND_URL="http://localhost:5173,http://localhost:8080"
+FRONTEND_URL="*"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
