Increase the size of the logo

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Database Configuration
-DATABASE_URL="postgresql://myshopke_user:ERB8QHAAlkBd1WwxjPUIibwuNNBQz1HX@dpg-d29o3i3e5dus73cpakm0-a/myshopke"
+DATABASE_URL="postgresql://postgres:243243@localhost:5432/myshopke"
+POSTGRES_DB=myshopke
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=243243
 
 # JWT Configuration
 JWT_SECRET="your-super-secure-jwt-secret-key-here"
@@ -13,7 +16,7 @@ NODE_ENV="production"
 
 # CORS Configuration
 # Multiple URLs can be separated by commas
-FRONTEND_URL="*"
+FRONTEND_URL="http://localhost:5173,http://localhost:8080,https://yourdomain.com"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
